--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 header {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   background-color: lightpink;
+}
+
+.list {
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
 }
